# pan-os-cli

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  Makefile  PRD.md  README.md  TODO.md  _config.yml  mkdocs.yml  pyproject.toml  sample_addresses.yaml
.github/workflows/: mkdocs.yml
docs/: index.md
docs/about/: contributing.md  getting-started.md  installation.md  introduction.md  license.md  release-notes.md  troubleshooting.md
docs/cli/: index.md
docs/cli/network/: interfaces.md  zones.md
docs/cli/objects/: address-group.md  address.md
docs/cli/operations/: commit.md
docs/cli/security/: policies.md
docs/css/: custom.css  termynal.css
docs/guide/: advanced-usage.md  bulk-operations.md  configuration.md  getting-started.md  yaml-structure.md
docs/js/: custom_termynal.js  termynal.js
fixes/: tag_creation_in_device_group.md  tag_references_fix.md  thread-monitoring-issue.md
src/pan_os_cli/: client.py  config.py  main.py  utils.py
src/pan_os_cli/commands/: objects.py
src/pan_os_cli/models/: objects.py
src/panos_cli/: client.py  config.py  main.py  utils.py
src/panos_cli/commands/: __init__.py  objects.py
src/panos_cli/models/: objects.py
tests/: test_tag_creation.py
